Añadir validación para el IBAN vacío y actualizar traducciones en archivos JSON

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1512,20 +1512,20 @@
     "social-security-number": "Social Security number",
     "software": "Software",
     "sort": "Order",
-    "sort-by-balance-asc": "Sort by balance ascending",
-    "sort-by-balance-desc": "Sort by balance descending",
-    "sort-by-code-asc": "Sort by code ascending",
-    "sort-by-code-desc": "Sort by code descending",
+    "sort-by-balance-asc": "Sort by ascending balance",
+    "sort-by-balance-desc": "Sort by descending balance",
+    "sort-by-code-asc": "Sort by ascending code",
+    "sort-by-code-desc": "Sort by descending code",
     "sort-by-column": "Sort by column",
-    "sort-by-credit-asc": "Sort by credit ascending",
-    "sort-by-credit-desc": "Sort by credit descending",
+    "sort-by-credit-asc": "Sort by ascending order",
+    "sort-by-credit-desc": "Sort by descending order",
     "sort-by-date-asc": "Sort by date asc.",
     "sort-by-date-desc": "Sort by date desc.",
-    "sort-by-debit-asc": "Sort by debit ascending",
-    "sort-by-debit-desc": "Sort by debit descending",
-    "sort-by-description-asc": "Sort by description ascending",
-    "sort-by-description-desc": "Sort by description descending",
-    "sort-by-price-asc": "Sort by price ascending",
+    "sort-by-debit-asc": "Sort by ascending order",
+    "sort-by-debit-desc": "Sort by descending order",
+    "sort-by-description-asc": "Sort by ascending description",
+    "sort-by-description-desc": "Sort by descending description",
+    "sort-by-price-asc": "Sort by ascending price",
     "sort-by-price-desc": "Sort by price descending",
     "sort-by-ref-asc": "Sort by reference asc.",
     "sort-by-ref-desc": "Sort by reference desc.",
