--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1521,7 +1521,7 @@
     "sort-by-credit-desc": "Ordina per credito decrescente",
     "sort-by-date-asc": "Ordina per data disc.",
     "sort-by-date-desc": "Ordina per data decrescente",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Ordina per debito crescente",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
@@ -1750,7 +1750,7 @@
     "use-holes-invoices-esp": "Se deselezioni l'uso degli spazi nelle fatture e ne elimini una, rimarrà lo spazio nella fatturazione e avrai problemi con l'Agenzia delle Entrate",
     "user": "utente",
     "user-and-config": "Utente e configurazione",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Guida utente",
     "users": "utenti",
     "using-apc": "Utilizzo della cache APC",
     "using-filecache": "Utilizzando Filecache",
