--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1522,11 +1522,11 @@
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
     "sort-by-date-desc": "Sortuj wg daty malejąco",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-debit-desc": "Sortuj według debetu malejąco",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Sortuj według ceny malejąco",
     "sort-by-ref-asc": "Sortuj wg referencji rosnąco",
     "sort-by-ref-desc": "Sortuj wg referencji malejąco",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
