--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1240,6 +1240,7 @@
     "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
     "plugin-enabled": "El Plugin %pluginName% ha sido activado correctamente.",
     "plugin-file-too-big": "Tento server nepovoluje nahrávání souborů větších než %size% MB. Zvětšete prosím maximální velikost nahrávání souborů v PHP nebo zkopírujte soubor do složky pluginy.",
+    "plugin-folder-not-equal-name": "La carpeta del plugin (%folderName%) no se llama igual que el plugin (%pluginName%)",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
