--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1240,6 +1240,7 @@
     "plugin-disabled": "O Plugin %pluginName% foi desativado com sucesso.",
     "plugin-enabled": "O Plugin %pluginName% foi ativado com sucesso.",
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
+    "plugin-folder-not-equal-name": "La carpeta del plugin (%folderName%) no se llama igual que el plugin (%pluginName%)",
     "plugin-installation-disabled": "A instalação de plug-ins está desativada neste servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "O plugin %plugin% precisa ser atualizado para funcionar com a nova versão do FacturaScripts.",
