--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1240,7 +1240,7 @@
     "plugin-disabled": "El Plugin %pluginName% ha estat desactivat correctament.",
     "plugin-enabled": "El plugin %pluginName% ha estat activat correctament.",
     "plugin-file-too-big": "Aquest servidor no permet pujar arxius de més de %size% MB. Si us plau, augmenta la mida màxima de pujada d'arxius en PHP o copia l'arxiu a la carpeta Plugins.",
-    "plugin-folder-not-equal-name": "La carpeta del plugin (%folderName%) no se llama igual que el plugin (%pluginName%)",
+    "plugin-folder-not-equal-name": "La carpeta del plugin (%folderName%) no es diu igual que el plugin (%pluginName%)",
     "plugin-installation-disabled": "La instal·lació de plugins està desactivada en aquest servidor",
     "plugin-installed": "Plugin '%pluginName%' instal·lat",
     "plugin-need-update": "El plugin %plugin% necessitarà actualització per funcionar amb la nova versió de FacturaScripts.",
