feat: update asset versioning to use dynamic date for cache busting

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1075,7 +1075,7 @@
     "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
     "new-password": "neues Passwort",
     "new-price": "Neuer Preis",
-    "new-product": "Nuevo producto",
+    "new-product": "Neues Produkt",
     "new-refund": "neue Rückerstattung",
     "new-subaccount": "Neues Unterkonto",
     "new-supplier": "Neuer Lieferant",
@@ -1518,7 +1518,7 @@
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Nach Spalte sortieren",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Nach Haben aufsteigend sortieren",
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Nach Datum absteigend sortieren",
