--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -365,7 +365,7 @@
     "cron-job": "Tâche programmée",
     "cron-timeout": "Le cron s'est arrêté pour ne pas dépasser le temps d'exécution maximum de PHP. Veuillez exécuter le cron depuis le terminal pour éviter cette limite.",
     "crons": "Crons",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "Le fichier CSV doit contenir au moins 2 colonnes",
     "currency": "Devise",
     "currency-position": "Position du symbole de la devise",
     "current-quarter": "Trimestre actuel",
@@ -1514,7 +1514,7 @@
     "software": "Logiciel",
     "sort": "Commande",
     "sort-by-balance-asc": "Trier par solde croissant",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Trier par solde décroissant",
     "sort-by-code-asc": "Trier par code croissant",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Tri par colonne",
@@ -1522,7 +1522,7 @@
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Trier par date décroissante.",
     "sort-by-date-desc": "Trier par date décroissante.",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Trier par débit croissant",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
