Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1515,7 +1515,7 @@
     "sort": "Reihenfolge",
     "sort-by-balance-asc": "Nach Saldo aufsteigend sortieren",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Nach Code aufsteigend sortieren",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Nach Spalte sortieren",
     "sort-by-credit-asc": "Nach Haben aufsteigend sortieren",
@@ -1728,7 +1728,7 @@
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
     "unsafe-file": "Unsicherer Datei",
-    "unsafe-file-p": "Aus Sicherheitsgründen verhindern wir das Herunterladen bestimmter Dateitypen, wie diese: %file%",
+    "unsafe-file-p": "Aus Sicherheitsgründen verhindern wir das Herunterladen bestimmter Dateitypen, wie diesen: %file%",
     "until-accounting-entry": "Bis Buchung",
     "until-date": "bis-Datum",
     "until-subaccount": "Bis Unterkonto",
