--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -42,7 +42,7 @@
     "accounting-items": "Éléments comptables",
     "accounting-lines-error": "Erreur dans les lignes comptables",
     "accounting-plan": "Plan comptable",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "Le plan comptable doit comporter au moins deux niveaux : comptes et sous-comptes.",
     "accounting-possible-duplicated": "Entrée comptable possible dupliquée de cet autre. Si ce n'est pas le cas, pour éviter ce message, changez simplement le concept.",
     "accounting-reports": "Rapports de comptabilité",
     "accounting-within-regularization": "L'entrée comptable est dans une régularisation de %taxe%. Elle ne peut pas être supprimée.",
@@ -365,7 +365,7 @@
     "cron-job": "Tâche programmée",
     "cron-timeout": "Le cron s'est arrêté pour ne pas dépasser le temps d'exécution maximum de PHP. Veuillez exécuter le cron depuis le terminal pour éviter cette limite.",
     "crons": "Crons",
-    "csv-file-must-have-at-least-2-columns": "Le fichier CSV doit contenir au moins 2 colonnes",
+    "csv-file-must-have-at-least-2-columns": "Le fichier CSV doit comporter au moins deux colonnes",
     "currency": "Devise",
     "currency-position": "Position du symbole de la devise",
     "current-quarter": "Trimestre actuel",
@@ -1075,7 +1075,7 @@
     "new-invoice-line-p": "Vous pouvez ajouter un produit en cliquant sur le bouton du produit ou en saisissant sa référence ou son code-barres dans le champ du code-barres. Ou appuyez sur le bouton de ligne pour une ligne sans produit.",
     "new-password": "Nouveau mot de passe",
     "new-price": "Nouveau prix",
-    "new-product": "Nuevo producto",
+    "new-product": "Nouveau produit",
     "new-refund": "Nouveau remboursement",
     "new-subaccount": "Nouveau sous-compte",
     "new-supplier": "Nouveau fournisseur",
@@ -1092,13 +1092,13 @@
     "no-gaps-found": "Aucune lacune constatée",
     "no-invoice": "Pas de facture",
     "no-outstanding-amount": "Il n'y a pas de montant impayé",
-    "no-plugins-installed": "Aucun plugin installé",
+    "no-plugins-installed": "Aucun plugin n’est installé",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Pas de référence",
     "no-results-found": "Aucun résultat trouvé",
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
-    "no-updates-now": "Pas de mises à jour pour le moment",
+    "no-updates-now": "Aucune mise à jour pour le moment",
     "non-editable-accounting-entry": "Entrée comptable non modifiable",
     "non-editable-columns": "Colonnes non modifiables : %columns%",
     "non-editable-document": "Document non éditable",
@@ -1240,7 +1240,7 @@
     "plugin-disabled": "Le plugin %pluginName% a été désactivé correctement.",
     "plugin-enabled": "Le plugin %pluginName% a été activé avec succès.",
     "plugin-file-too-big": "Ce serveur n'autorise pas le téléchargement de fichiers d'une taille supérieure à %size% Mo. Veuillez augmenter la taille maximale de téléchargement de fichier en PHP ou copier le fichier dans le dossier Plugins.",
-    "plugin-folder-not-equal-name": "La carpeta del plugin (%folderName%) no se llama igual que el plugin (%pluginName%)",
+    "plugin-folder-not-equal-name": "Le dossier du plugin (%folderName%) n’a pas le même nom que le plugin (%pluginName%)",
     "plugin-installation-disabled": "L'installation de modules est désactivée sur ce serveur",
     "plugin-installed": "Plugin '%pluginName%' installé",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1518,7 +1518,7 @@
     "sort-by-code-asc": "Trier par code croissant",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Tri par colonne",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Trier par crédit croissant",
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Trier par date décroissante.",
     "sort-by-date-desc": "Trier par date décroissante.",
@@ -1526,7 +1526,7 @@
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-asc": "Trier par prix croissant",
     "sort-by-price-desc": "Trier par prix décroissant",
     "sort-by-ref-asc": "Trier par référence asc.",
     "sort-by-ref-desc": "Trier par référence descendante.",
