--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -687,7 +687,7 @@
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Non pode escribir sobre cartafol FacturaScripts.",
-    "folders-not-writable": "Non se pode escribir nas carpetas de FacturaScripts: %folders%",
+    "folders-not-writable": "Non se pode escribir nos cartafoles de FacturaScripts: %folders%",
     "font": "Fonte",
     "font-size": "Tamaño de fonte",
     "footer": "Pe de páxina",
@@ -1239,8 +1239,8 @@
     "plugin-deleted": "Plugin %pluginName% eliminouse con éxito.",
     "plugin-disabled": "O Plugin %pluginName% foi desactivado correctamente.",
     "plugin-enabled": "Plugin activado correctamente.",
-    "plugin-file-too-big": "Este servidor non permite subir arquivos de máis de %size% MB. Por favor, aumenta o tamaño máximo de subida de arquivos en PHP ou copia el arquivo á carpeta Plugins.",
-    "plugin-folder-not-equal-name": "La carpeta del plugin (%folderName%) no se llama igual que el plugin (%pluginName%)",
+    "plugin-file-too-big": "Este servidor non permite subir arquivos de máis de %size% MB. Por favor, aumenta o tamaño máximo de subida de arquivos en PHP ou copia o arquivo ó cartafol Plugins.",
+    "plugin-folder-not-equal-name": "O cartafol do plugin (%folderName%) non se chama igual que o plugin (%pluginName%)",
     "plugin-installation-disabled": "A instalación de plugins está desactivada neste servidor",
     "plugin-installed": "Plugin \"% pluginName%\" instalado",
     "plugin-need-update": "O plugin %plugin% precisará actualización para funcionar coa nova versión de FacturaScripts.",
@@ -1838,6 +1838,6 @@
     "your": "seu",
     "zip-code": "Código postal",
     "zip-codes": "Códigos postais",
-    "zip-error-wrong-structure": "A estructura do zip é incorreta. Debe conter a carpeta do plugin e só un plugin.",
+    "zip-error-wrong-structure": "A estructura do zip é incorreta. Debe conter o cartafol do plugin e só un plugin.",
     "zone": "Zona"
 }
