Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -42,7 +42,7 @@
     "accounting-items": "Articoli contabili",
     "accounting-lines-error": "errore-righe-contabili",
     "accounting-plan": "piano contabile",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "Il piano contabile deve avere almeno 2 livelli: conti e sottoconti.",
     "accounting-possible-duplicated": "Eventuale registrazione contabile duplicata di quest'altra. Se non c'è, per evitare questo messaggio, cambia semplicemente il concetto.",
     "accounting-reports": "Rapporti contabili",
     "accounting-within-regularization": "La registrazione contabile rientra in una regolarizzazione del % IVA %. Non può essere eliminato.",
@@ -1515,7 +1515,7 @@
     "sort": "Ordinare",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Ordina per codice ascendente",
     "sort-by-code-desc": "Ordina per codice decrescente",
     "sort-by-column": "Ordina per colonna",
     "sort-by-credit-asc": "Ordina per credito crescente",
