--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -609,7 +609,7 @@
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
     "es-tax-regime-one-stop-shop-oss": "es-regime-podatkowy-jednolity-OSS",
     "es-tax-regime-simplified": "Reżim uproszczony",
-    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-retail-traders": "Specjalny reżim podatkowy dla sprzedawców detalicznych",
     "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Dopłata równoważna",
     "es-tax-regime-telecom": "Regímenes especiales de telecomunicaciones, radiodifusión o televisión y otros",
