--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1075,7 +1075,7 @@
     "new-invoice-line-p": "Você pode adicionar um produto pressionando o botão produto ou digitando sua referência ou código de barras no campo código de barras. Ou pressione o botão linha para uma linha sem produto.",
     "new-password": "Nova senha",
     "new-price": "Novo preço",
-    "new-product": "Nuevo producto",
+    "new-product": "Novo produto",
     "new-refund": "Nova Devolução",
     "new-subaccount": "Nova subconta",
     "new-supplier": "Novo Fornecedor",
@@ -1225,7 +1225,7 @@
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-extensions": "Extensões PHP",
-    "php-extensions-required": "Extensões PHP requeridas",
+    "php-extensions-required": "Extensões PHP necessárias",
     "php-support-end": "p",
     "php-version-too-new": "Recomenda-se usar uma versão do PHP entre %min_version% e %max_version%. Atualmente, tem a %version%",
     "physical-stock": "Estoque físico",
@@ -1516,7 +1516,7 @@
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo decrescente",
     "sort-by-code-asc": "Ordenar por código ascendente",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Ordenar por código decrescente",
     "sort-by-column": "Ordenar por coluna",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
     "sort-by-credit-desc": "Ordenar por haber descendente",
