--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1523,7 +1523,7 @@
     "sort-by-date-asc": "Trier par date décroissante.",
     "sort-by-date-desc": "Trier par date décroissante.",
     "sort-by-debit-asc": "Trier par débit croissant",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-debit-desc": "Trier par débit décroissant",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Trier par prix croissant",
