feat: improved screen loading

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -946,6 +946,8 @@
     "list": "Lista",
     "load-def-acc-plan": "Load default accounting plan",
     "loading-controller": "Loading controller: '%controllerName%'",
+    "loading-models": "Loading models",
+    "loading-plugins": "Loading plugins",
     "local-business-rental": "Rental of Premises",
     "location": "Location",
     "lock-accounting": "Lock accounting",
@@ -1265,6 +1267,7 @@
     "postgresql": "PostgreSQL",
     "precio": "Prive",
     "predefined-concepts": "Predefined Concepts",
+    "preparando-componentes": "Preparing components",
     "preferences": "Preferences",
     "preview": "Preview",
     "previous": "Previous",
