--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -946,6 +946,8 @@
     "list": "Lista",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
     "loading-controller": "Cargando controlador: '%controllerName%'",
+    "loading-models": "Cargando modelos",
+    "loading-plugins": "Cargando plugins",
     "local-business-rental": "Alquiler locales",
     "location": "Ubicación",
     "lock-accounting": "Bloquear contabilidad",
@@ -1265,6 +1267,7 @@
     "postgresql": "PostgreSQL",
     "precio": "Precio",
     "predefined-concepts": "Conceptos Predefinidos",
+    "preparando-componentes": "Preparando componentes",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
     "previous": "Anterior",
