--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Fehler beim Schreiben des Zertifikats",
     "errors": "Fehler",
     "es_EC": "es_EC",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
     "es-tax-exception-art-7": "Spanien: N3 nicht steuerpflichtig Art. 7 LIVA – Nicht steuerpflichtige Vorgänge (Einlagen, Übertragung von UEA, Muster…)",
     "es-tax-exception-e1": "Spanien: Ausnahme nach Artikel 20 des Umsatzsteuergesetzes",
