--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Errore durante la scrittura del certificato",
     "errors": "errori",
     "es_EC": "Spagnolo (Ecuador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "eccezione fiscale art. 14",
     "es-tax-exception-art-7": "eccezione fiscale-es-art-7",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
