--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Erro ao escrever o certificado",
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
     "es-tax-exception-art-7": "exceção de imposto - sujeito passivo",
     "es-tax-exception-e1": "E",
@@ -1518,7 +1522,7 @@
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código decrescente",
     "sort-by-column": "Ordenar por coluna",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Ordenar por crédito ascendente",
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por data desc.",
