--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Error en escriure el certificat",
     "errors": "Errades",
     "es_EC": "Espanyol (Ecuador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "excepció fiscal art. 14",
     "es-tax-exception-art-7": "excepció fiscal art. 7",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
