--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Error writing certificate",
     "errors": "Mistakes",
     "es_EC": "Spanish (Ecuador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "Tax exception art. 14",
     "es-tax-exception-art-7": "Tax exception art. 7",
     "es-tax-exception-e1": "Spain: exception by article 20 of the VAT Law",
