--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Errores",
     "es_EC": "Español (Ecuador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "España: N4 No sujeta art. 14 LIVA – Operaciones vinculadas a exportaciones",
     "es-tax-exception-art-7": "España: N3 No sujeta art. 7 LIVA – Operaciones no sujetas (aportaciones, transmisión de UEA, muestras…)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 LIVA – Exenciones interiores (sanidad, enseñanza, seguros, financieros…)",
