--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Errores",
     "es_EC": "Español (Ecuador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
     "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
