--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Errore bat gertatu da ziurtagiria idaztean",
     "errors": "Erroreak",
     "es_EC": "Espainiako gaztelania (Ekuador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "Espainia: N4 Art. 14 LIVA – ez dago zerga-subjektuan (esportazioekin lotutako eragiketak)",
     "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Espainia: BEZaren 20. legearen artikuluaren salbuespena",
