--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Erreur lors de l'écriture du certificat",
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "Espagne : N4 Non soumise (art. 14 LIVA) – Opérations liées aux exportations",
     "es-tax-exception-art-7": "art 7 d'exception fiscale",
     "es-tax-exception-e1": "Espagne: exception pour l'article 20 de la loi sur la TVA",
