--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Erro ao escribir o certificado",
     "errors": "Erros",
     "es_EC": "Español (Ecuador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "excepción fiscal art. 14",
     "es-tax-exception-art-7": "excepción fiscal art. 7",
     "es-tax-exception-e1": "España: excepción polo artigo 20 da Ley do IVE",
