--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -587,6 +587,10 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Błędy",
     "es_EC": "Hiszpański (Ekwador)",
+    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "Hiszpania: N4 Niepodlegające opodatkowaniu (art. 14 LIVA) – operacje związane z eksportem",
     "es-tax-exception-art-7": "wyjątek podatkowy ES - art. 7",
     "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
