--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -365,7 +365,7 @@
     "cron-job": "Lavoro pianificato",
     "cron-timeout": "Il cron è stato interrotto per non superare il tempo massimo di esecuzione di PHP. Si prega di eseguire il cron da terminale per evitare questo limite.",
     "crons": "Cron",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "Il CSV deve contenere almeno 2 colonne",
     "currency": "Moneta",
     "currency-position": "Posizione del simbolo di valuta",
     "current-quarter": "Trimestre attuale",
@@ -588,9 +588,9 @@
     "errors": "errori",
     "es_EC": "Spagnolo (Ecuador)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-ceuta-melilla": "Imposta Ceuta e Melilla",
+    "es-operation-tax-igic": "Imposta IGIC",
+    "es-operation-tax-other": "Altre operazioni fiscali",
     "es-tax-exception-art-14": "eccezione fiscale art. 14",
     "es-tax-exception-art-7": "eccezione fiscale-es-art-7",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
@@ -1530,7 +1530,7 @@
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-asc": "Ordina per prezzo crescente",
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordina per riferimento asc.",
     "sort-by-ref-desc": "Ordina per riferimento discendente",
