--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1519,7 +1519,7 @@
     "sort": "Ordenar",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo decrescente",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Ordenar por código crescente",
     "sort-by-code-desc": "Ordenar por código decrescente",
     "sort-by-column": "Ordenar por coluna",
     "sort-by-credit-asc": "Ordenar por crédito ascendente",
