fix: update translation keys for user, product, customer, and invoice limits in About.html.twig and localization files

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1079,7 +1079,7 @@
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nueva contraseña",
     "new-price": "Nuevo precio",
-    "new-product": "Nuevo producto",
+    "new-product": "Nový produkt",
     "new-refund": "Nueva devolución",
     "new-subaccount": "Nové podúčet",
     "new-supplier": "Nuevo proveedor",
