--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1534,7 +1534,7 @@
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-asc": "Nach Lagerbestand aufsteigend sortieren",
     "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Aufsteigend sortiert",
     "sorted-desc": "Absteigend sortiert",
