--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1528,7 +1528,7 @@
     "sort-by-date-desc": "Ordina per data decrescente",
     "sort-by-debit-asc": "Ordina per debito crescente",
     "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-asc": "Ordina per descrizione crescente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordina per prezzo crescente",
     "sort-by-price-desc": "Ordenar por precio descendente",
