--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1517,7 +1517,7 @@
     "social-security-number": "Numer ubezpieczenia społecznego",
     "software": "Oprogramowanie",
     "sort": "Sortowanie",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Sortuj według salda rosnąco",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
