--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1527,15 +1527,15 @@
     "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-debit-desc": "Ordenar por débito descendente",
+    "sort-by-description-asc": "Ordenar por descrição ascendente",
     "sort-by-description-desc": "Ordenar por descrição descendente",
     "sort-by-price-asc": "Ordenar por preço crescente",
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-asc": "Ordenar por estoque ascendente",
+    "sort-by-stock-desc": "Ordenar por estoque descendente",
     "sorted-asc": "Ordenado de forma ascendente",
     "sorted-desc": "Ordenado decrescente",
     "source": "Fonte",
