Actualizadas las traducciones.

--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -165,7 +165,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Hazte patrocinador",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "Operación con beneficio a terceros",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
@@ -587,10 +587,10 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Errores",
     "es_EC": "Español (Ecuador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-added-value": "Operación sujeta al IVA",
+    "es-operation-tax-ceuta-melilla": "Operación sujeta al IPSI (Ceuta y Melilla)",
+    "es-operation-tax-igic": "Operación sujeta al IGIC (Canarias)",
+    "es-operation-tax-other": "Operación no sujeta a los impuestos anteriores",
     "es-tax-exception-art-14": "España: N4 No sujeta art. 14 LIVA – Operaciones vinculadas a exportaciones",
     "es-tax-exception-art-7": "España: N3 No sujeta art. 7 LIVA – Operaciones no sujetas (aportaciones, transmisión de UEA, muestras…)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 LIVA – Exenciones interiores (sanidad, enseñanza, seguros, financieros…)",
@@ -600,8 +600,8 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 LIVA Entregas intracomunitarias de bienes",
     "es-tax-exception-e6": "España: otras exenciones (oro de inversión, regímenes especiales, etc.)",
     "es-tax-exception-location-rules": "España: N2 No sujeta – Reglas de localización de servicios (arts. 69–70 LIVA, servicios B2B UE o fuera UE)",
-    "es-tax-exception-n1": "es-tax-exception-n1",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n1": "Operaciones interiores exentas según el artículo 10.1 de la Ley 20\/1991 del IGIC",
+    "es-tax-exception-n5": "Operaciones exentas por aplicación del artículo 25 de la Ley del IGIC",
     "es-tax-exception-passive-subject": "España: N6 Inversión del sujeto pasivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
@@ -1585,7 +1585,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
-    "successive-tract": "successive-tract",
+    "successive-tract": "Entrega en cadena",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma de los totales de iva de las líneas de IVA debería ser: %lineTotalTax%",
