--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -165,7 +165,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Hazte patrocinador",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "Operación con beneficio a terceros",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
@@ -587,10 +587,10 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Errores",
     "es_EC": "Español (Ecuador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-added-value": "Operación sujeta al IVA",
+    "es-operation-tax-ceuta-melilla": "Operación sujeta al IPSI (Ceuta y Melilla)",
+    "es-operation-tax-igic": "Operación sujeta al IGIC (Canarias)",
+    "es-operation-tax-other": "Operación no sujeta a los impuestos anteriores",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
     "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
@@ -600,7 +600,7 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Operaciones interiores exentas según el artículo 10.1 de la Ley 20\/1991 del IGIC",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
@@ -1585,7 +1585,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
-    "successive-tract": "successive-tract",
+    "successive-tract": "Entrega en cadena",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de ITBIS debería ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma de los totales de ITBIS de las líneas de ITBIS debería ser: %lineTotalTax%",
