Añadido botón para limpiar los filtros en los listados.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -256,6 +256,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Ciutats",
     "city": "Ciutat",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "Clic en l'enllaç (a dalt) per a afegir",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar l'assentament comptable",
