--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -256,6 +256,7 @@
     "cifnif": "IFK\/IFZ",
     "cities": "Hiriak",
     "city": "Hiria",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "Liburutegitik ahal dituzu artxiboak gehitu, administratzaile menuan.",
     "clone": "Bikoiztu",
     "clone-account-entry": "Bikoiztu kontabilitate idazpena",
