--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -256,6 +256,7 @@
     "cifnif": "CIF \/ NIF",
     "cities": "Cidades",
     "city": "Cidade",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "Pode engadir arquivos desde a biblioteca, no menú administrador.",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar o asento contable",
