--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -256,6 +256,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Città",
     "city": "Città",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "Fare clic sul link per aggiungere",
     "clone": "Duplicare",
     "clone-account-entry": "Duplicare la registrazione contabile",
