--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -256,6 +256,7 @@
     "cifnif": "CIF\\\/NIF",
     "cities": "Miasta",
     "city": "Miasto",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "Możesz dodać pliki z biblioteki w menu administratora.",
     "clone": "Duplikuj",
     "clone-account-entry": "Klonuj wpis księgowy",
