--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -256,6 +256,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "cidades",
     "city": "Cidade",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar a entrada contábil",
