--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -256,6 +256,7 @@
     "cifnif": "TIC\/TIN",
     "cities": "Cities",
     "city": "City",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "You can add files from the library, in the administrator menu",
     "clone": "Clone",
     "clone-account-entry": "Duplicate the accounting entry",
