--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -256,6 +256,7 @@
     "cifnif": "DNI\/RUC",
     "cities": "Ciudades",
     "city": "Ciudad",
+    "clear-filters": "Limpiar filtros",
     "click-link-to-add": "Puede añadir archivos desde la biblioteca, en el menú administrador.",
     "clone": "Duplicar",
     "clone-account-entry": "Clonar entrada de cuenta",
